--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
 
 header{
   height: 40px;
-  background-color: rgb(15, 12, 64);
+  background-color:#282829;
   text-align: center;
   color: #0B2447;
 }
@@ -21,33 +21,35 @@ header p{
   padding:10px;
   text-align: center;
   color: white;
+  font-family: 'TAEBAEKmilkyway';
+  letter-spacing: 3px;
 }
 
 main{
   height: 600px;
   width: 1000px;
   margin: 0 auto;
-  background-color: #F8F5E4;
+  background-color: black;
   font-family: 'TAEBAEKmilkyway';
-  border-right: 3px solid  rgb(63, 73, 127);
-  border-left: 3px solid  rgb(63, 73, 127);
+  border-right: 3px solid  black;
+  border-left: 3px solid  black;
 }
 
 #top{
   height: 35px;
-  background-color: rgb(63, 73, 127);
-  margin-bottom: 15px;
-  border-radius: 0 0 10px 10px;
+  background-color: #434344;
+  margin-bottom: 15px;  
   color:white;
   font-style: 18px;
   text-align: center;
-  line-height: 35px;
+  line-height: 35px; 
+  letter-spacing: 2px;
 }
 
 #container{
   height: 410px;
   padding: 10px;
-  background-color: #F8F5E4;
+  background-color: black;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around ;
@@ -61,13 +63,13 @@ section{
   border-radius: 7px;
   background-repeat: no-repeat;
   background-size: contain;
-  border: 2px solid black;
+  border: 2px solid gray;
 }
 
 section p{
-  padding: 20px;
+  padding: 10px;
   text-align: center; 
-  font-size: 12px;
+  font-size: 15px;
   line-height: 200%;
   position: relative;
 }
@@ -98,7 +100,7 @@ section p{
 
 aside{
     height: 125px;
-  background-color:#F8F5E4;
+  background-color: black;
   margin-bottom: 50px;
   margin: 0px;
   display: flex;
@@ -112,10 +114,9 @@ aside{
 #team{
   width: 350px;
   height: 70%;
-  background-color:#5F85BB  ;
+  background-color:gray;
   border-radius: 5px;
   font-style: 15px;
-  border: 1px dashed black;
 }
 
 #team p{
@@ -134,24 +135,23 @@ aside{
 #hi{
   width: 230px;
   height: 70%;
-  background-color: #5F85BB;
+  background-color: gray;
   color: black;
   border-radius: 5px;
   font-style: 15px;
-  border: 1px dashed black;
 }
 
 footer{
   height: 130px;
-  background-color: rgb(15, 12, 64);
+  background-color: #282829;
 }
 
 footer p{
-  text-align:right;
+  text-align:center;
   color: white;
   padding: 40px;
   font-weight:100;
-  font-size: 10px;
+  font-size: 12px;
 }
 
 .bg{
@@ -171,7 +171,7 @@ footer p{
 }
 
 section:hover{
-  transform: scale(1.4);
+  transform: scale(1.1);
   transition: all 0.2s linear;  
 }
 
